fix/version iphone 6

--- a/css/style.css
+++ b/css/style.css
@@ -738,7 +738,7 @@ main {
     height: 100%;
   }
   section {
-    height: 114vh;
+    height: 80vh;
     margin: 20px 20px 20px 20px;
   }
   .header__sub-title h4 {
